# ProyectoEstandaresDatos

./: .gitignore  README.md  pyproject.toml
DataStandards/: README.md
DataStandards/cli/: README.md  __init__.py  data.py
DataStandards/data/: config.py
DataStandards/data/entrypoints/: access_gdc.py  access_hgnc.py  access_uniprot.py
DataStandards/db/: __init__.py  gdc_config.py  hgnc_config.py  import_gdc_mongo.py  import_genes_mongo.py  import_hgnc_mongo.py  import_proteins_mongo.py  import_uniprot_mongo.py  uniprot_config.py
DataStandards/utils/: __init__.py  check_downloaded_filelength.py
biointegrate/cli/: __init__.py  data.py  pipeline.py  presentation.py  queries.py
biointegrate/data/: config.py
biointegrate/data/entrypoints/: access_gdc.py  access_hgnc.py  access_uniprot.py
biointegrate/db/: __init__.py  gdc_config.py  hgnc_config.py  import_all_mongo.py  import_gdc_mongo.py  import_uniprot_mongo.py  uniprot_config.py
biointegrate/quality/: __init__.py  evaluate.py
biointegrate/queries/: __init__.py  mongo_executor.py  query_parser.py
biointegrate/t2/: transform.py
biointegrate/utils/: check_downloaded_filelength.py
config/: README.md  data_config.yaml
config/data/: ainhoa_data_config.yaml  mario_data_config.yaml  martina_data_config.yaml
config/db_mongo/: mario_mongodb_config.yaml
config/download_data/: mario_data_config.yaml
config/queries/: example_queries.yaml  mario_queries.yaml
data/: README.md
data/rdf/: biointegrate_data_overlay.ttl  biointegrate_graph.html
docs/: PROJECT_CONTEXT.txt  README.md  runner-usage.md  t1_gdc_mongo_import.md  t1_proteins_collection_design.md  t2_config_format.md  t2_query3_membrane_cancer_coverage.md  t2_query_format.md
docs/reports/: T1_Colecciones_Propuestas.md  T1_README_Datos.md  guia_lectura_queries_cli.html  t1_gdc_mongo_import.md  t1_genes_collection_design.md  t1_proteins_collection_design.md  t1_proteins_collection_redesign.md
docs/t2-queries/: Query1_LGG_UniProt.txt  Query2Completa.txt  Query3_MembraneCancerCoverage.txt  Query4_DatabaseSchema.txt  Query5_CollectionRelationships.txt  Query6_OntologyIndividual.txt
docs/t2-queries-ejemplos/: README.md
docs/t2-queries-ejemplos/queries/: query_hgnc_uniprot.txt  query_smoke_test_1.txt  query_smoke_test_2.txt
docs/t2-queries-ejemplos/results/: hgnc_count_by_chromosome.json  hgnc_find_tp53.json
docs/t2-resultados/: query_6_ontology_individual.json
docs/t2-resultados/html/: query_1_lgg_uniprot.html  query_6_ontology_individual.html
docs/t2-resultados/json/: query_1_lgg_uniprot.json  query_4_database_schema.json  query_5_collection_relationships.json  query_6_ontology_individual.json
docs/t2-resultados/xml/: query_1_lgg_uniprot.xml  query_4_database_schema.xml  query_5_collection_relationships.xml  query_6_ontology_individual.xml
examples/: README.md
notebooks/: README.md
ontology/: README.html  __init__.py
ontology/assets/: biointegrate_populated.owl
ontology/data/owl/: biointegrate-ontology-reasoned.owl  biointegrate.owl
ontology/data/rdf/: biointegrate_data_overlay.ttl  biointegrate_graph.html
ontology/docs/: ontology_population.md  trazabilidad_mongodb.md
ontology/rdf/generator/: mongo_to_ttl_owl_coherent.py
ontology/rdf/queries/: execute_sparql_on_ttl.py  test_queries_suite.py
ontology/rdf/results/: q01_results.csv  q03_results.csv  q05_results.csv  q06_results.csv  visualize_ttl_html.py
ontology/scripts/: __init__.py  json_to_owl.py  mongo_to_rdf.py  mongo_to_ttl_owl_coherent.py  test_queries_suite.py  visualize_subset.py
ontology/sparql/queries/: all_queries.txt  execute_sparql.py  q01.rq  q03.rq  q04.rq  q05.rq  q06.rq  run_sparql.py
ontology/sparql/results/: q02_results.csv  q03_results.csv  q04_results.csv  q05_results.csv  q06_results.csv
results/: README.md
results/sparql/: q03_results.csv
scripts/: README.md  build_hgnc_json.py  build_uniprot_entries.py  generate_t2_reports.py  run_t2_query1_lgg_uniprot.py  scan_json.py  verify_downloads.py
sparql/: execute_sparql.py  q02.rq  q06.rq
tests/: README.md
tools/: run_sparql.py
xslt/: biointegrate_report.xslt
