[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biointegrate"
version = "0.1.0"
description = "Proyecto de Estándares de Datos para la gestión y análisis de datos biomédicos"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = [
    "Estandares de Datos",
]
authors = [
    {name = "Mario Pascual-González", email = "mpascual@uma.es"},
    {name = "Teresa Vega Martínez", email = "teresavegamar@gmail.com"},
    {name = "Juan Soriano", email = "0610948742@uma.es"},
    {name = "Ainhoa Pérez", email = "ainhoa140602@gmail.com"},
    {name = "Martina Cebolla Salas", email = "martinacesalas@gmail.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "requests",
    "types-requests",
    "pyyaml",
    "pymongo",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/MarioPasc/ProyectoEstandaresDatos"
Documentation = "https://github.com/MarioPasc/ProyectoEstandaresDatos#readme"
Repository = "https://github.com/MarioPasc/ProyectoEstandaresDatos"
"Bug Tracker" = "https://github.com/MarioPasc/ProyectoEstandaresDatos/issues"
Changelog = "https://github.com/MarioPasc/ProyectoEstandaresDatos/releases"

[project.scripts]
biointegrate-download = "DataStandards.cli.data:main"
biointegrate-import-gdc = "DataStandards.db.gdc_config:main"
biointegrate-import-uniprot = "DataStandards.db.uniprot_config:main"
biointegrate-import-hgnc = "DataStandards.db.hgnc_config:main"
biointegrate-import-all = "DataStandards.db.import_all_mongo:main"
biointegrate-pipeline = "DataStandards.cli.pipeline:main"


[tool.setuptools]
packages = [
    "DataStandards",
    "DataStandards.cli",
    "DataStandards.data",
    "DataStandards.data.entrypoints",
    "DataStandards.db",
    "DataStandards.utils",
    "DataStandards.quality"
]
[tool.setuptools.package-data]
medsyn = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

