[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biointegrate"
version = "0.1.0"
description = "Proyecto de Estándares de Datos para la gestión y análisis de datos biomédicos"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "Estandares de Datos",
]
authors = [
    {name = "Mario Pascual-González", email = "mpascual@uma.es"},
    {name = "Teresa Vega Martínez", email = "teresavegamar@gmail.com"},
    {name = "Juan Soriano", email = "0610948742@uma.es"},
    {name = "Ainhoa Pérez", email = "ainhoa140602@gmail.com"},
    {name = "Martina Cebolla Salas", email = "martinacesalas@gmail.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "requests",
    "types-requests",
    "pyyaml",
    "pymongo",
    "pandas",
    "lxml",
    "rdflib>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/MarioPasc/ProyectoEstandaresDatos"
Documentation = "https://github.com/MarioPasc/ProyectoEstandaresDatos#readme"
Repository = "https://github.com/MarioPasc/ProyectoEstandaresDatos"
"Bug Tracker" = "https://github.com/MarioPasc/ProyectoEstandaresDatos/issues"
Changelog = "https://github.com/MarioPasc/ProyectoEstandaresDatos/releases"

[project.scripts]
biointegrate-download = "biointegrate.cli.data:main"
biointegrate-import-gdc = "biointegrate.db.gdc_config:main"
biointegrate-import-uniprot = "biointegrate.db.uniprot_config:main"
biointegrate-import-hgnc = "biointegrate.db.hgnc_config:main"
biointegrate-import-all = "biointegrate.db.import_all_mongo:main"
biointegrate-pipeline = "biointegrate.cli.pipeline:main"
biointegrate-execute-queries = "biointegrate.cli.queries:main"
biointegrate-populate-ontology = "ontology.owl.json_to_owl:main"


[tool.setuptools]
packages = [
    "biointegrate",
    "biointegrate.cli",
    "biointegrate.data",
    "biointegrate.data.entrypoints",
    "biointegrate.db",
    "biointegrate.utils",
    "biointegrate.quality",
    "biointegrate.queries",
    "ontology",
    "ontology.owl",
    "ontology.rdf",
    "ontology.sparql",
]
[tool.setuptools.package-data]
biointegrate = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

